--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,11 +51,11 @@ jobs:
 
   check-comments:
     runs-on: ubuntu-latest
-    needs: build
+    needs: deploy
     if: github.event_name == 'pull_request'
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Install GitHub CLI
         run: |
@@ -64,7 +64,7 @@ jobs:
 
       - name: Check Pull Request Comments
         id: pr-comments
-        run: | 
+        run: |
           PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
           COMMENTS=$(gh pr view $PR_NUMBER --json comments --jq '.comments')
           
