fix: Update package.json for unit testing
- package.json을 업데이트하여 유닛 테스팅을 위한 설정을 추가합니다.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "jest --config jest.unit.config.js"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "github-label-sync": "^2.3.1",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
