ci: Update deploy workflow
- 배포 워크플로우 업데이트
- GitHub 액션 빌드 설정 수정
- 빌드 및 테스트 단계 업데이트
- 단위 테스트 실행 내용 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install
 
       # 4. 테스트
-      - name: Test unit
+      - name: Run unit tests
         run: npm run test:unit
 
       # 5. 빌드
