--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "jest --config jest.unit.config.js"
+    "test:unit": "jest --config jest.unit.config.cjs"
   },
   "dependencies": {
     "github-label-sync": "^2.3.1",
@@ -17,6 +17,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.2.8",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "babel-jest": "^29.0.0",
+    "jest-junit": "^13.0.0"
   }
 }
