--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
   "name": "piomsfe",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
+  "version": "1.0.0",
+  "license": "ISC",
+  "dependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "axios": "^1.7.1",
+    "vite": "^5.2.11",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "jest --config jest.unit.config.cjs"
-  },
-  "dependencies": {
-    "github-label-sync": "^2.3.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.8",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
-    "babel-jest": "^29.0.0",
-    "jest-junit": "^13.0.0"
+    "serve": "vite preview"
   }
 }
