--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
   "name": "piomsfe",
-  "version": "1.0.0",
-  "license": "ISC",
-  "dependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "axios": "^1.7.1",
-    "qs": "^6.12.1",
-    "vite": "^5.2.11",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
-  },
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "jest --config jest.unit.config.cjs"
+  },
+  "dependencies": {
+    "axios": "^1.7.1",
+    "gh-pages": "^6.1.1",
+    "github-label-sync": "^2.3.1",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2",
+    "vuex": "^4.1.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "babel-jest": "^29.0.0",
+    "jest": "^29.0.0",
+    "jest-junit": "^13.0.0",
+    "ts-jest": "^29.0.0",
+    "vite": "^5.2.8"
   }
 }
