--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: PIOMSFE
-          environment_name: PIOMSBE-env
+          environment_name: PIOMSFE-env
           version_label: deploy-${{ github.run_number }}
           region: ap-northeast-2
           deployment_package: deploy.zip
