--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
 
   check-comments:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: build-and-deploy
     if: github.event_name == 'pull_request'
     steps:
       - name: Checkout
