--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.1",
+    "express": "^4.19.2",
     "gh-pages": "^6.1.1",
     "github-label-sync": "^2.3.1",
     "node": "^18.20.3",
