--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,19 @@ jobs:
           cd dist
           zip -r ../deploy.zip .
 
+      - name: Retrieve EB Engine Log
+        run: |
+          EB_LOG=$(aws elasticbeanstalk describe-environment-resources --environment-name PIOMSFE-env --query 'EnvironmentResources.Instances[0].Id' --output text)
+          echo "Instance ID: $EB_LOG"
+          aws ec2 describe-instances --instance-ids $EB_LOG --query 'Reservations[0].Instances[0].State.Name' --output text
+          COMMAND_ID=$(aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=InstanceIds,Values=$EB_LOG" --parameters 'commands=["sudo cat /var/log/eb-engine.log"]' --query 'Command.CommandId' --output text)
+          sleep 10
+          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id $EB_LOG --query 'StandardOutputContent' --output text
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ap-northeast-2
+
       - name: Deploy to AWS Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
         with:
