--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '21.x'
+          node-version: '20.x'
 
       - name: Install dependencies
         run: npm install
@@ -29,19 +29,6 @@ jobs:
           cd dist
           zip -r ../deploy.zip .
 
-      - name: Retrieve EB Engine Log
-        run: |
-          EB_LOG=$(aws elasticbeanstalk describe-environment-resources --environment-name PIOMSFE-env --query 'EnvironmentResources.Instances[0].Id' --output text)
-          echo "Instance ID: $EB_LOG"
-          aws ec2 describe-instances --instance-ids $EB_LOG --query 'Reservations[0].Instances[0].State.Name' --output text
-          COMMAND_ID=$(aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=InstanceIds,Values=$EB_LOG" --parameters 'commands=["sudo cat /var/log/eb-engine.log"]' --query 'Command.CommandId' --output text)
-          sleep 10
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id $EB_LOG --query 'StandardOutputContent' --output text
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-northeast-2
-
       - name: Deploy to AWS Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
         with:
@@ -52,6 +39,33 @@ jobs:
           version_label: deploy-${{ github.run_number }}
           region: ap-northeast-2
           deployment_package: deploy.zip
+
+      - name: Check deployment status
+        run: |
+          STATUS=$(aws elasticbeanstalk describe-environments --environment-names PIOMSFE-env --query 'Environments[0].Health' --output text)
+          if [ "$STATUS" != "Green" ]; then
+            echo "Deployment failed. Environment health is $STATUS."
+            exit 1
+          else
+            echo "Deployment succeeded. Environment health is $STATUS."
+          fi
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ap-northeast-2
+
+      - name: Retrieve EB Engine Log
+        if: failure()
+        run: |
+          EB_LOG=$(aws elasticbeanstalk describe-environment-resources --environment-name PIOMSFE-env --query 'EnvironmentResources.Instances[0].Id' --output text)
+          echo "Instance ID: $EB_LOG"
+          COMMAND_ID=$(aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=InstanceIds,Values=$EB_LOG" --parameters 'commands=["sudo cat /var/log/eb-engine.log"]' --query 'Command.CommandId' --output text)
+          sleep 10
+          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id $EB_LOG --query 'StandardOutputContent' --output text
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ap-northeast-2
 
   check-comments:
     runs-on: ubuntu-latest
