--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '20.x', '21.x'
 
       - name: Install dependencies
         run: npm install
@@ -26,8 +26,11 @@ jobs:
 
       - name: Zip the build artifacts
         run: |
-          cd dist
-          zip -r ../deploy.zip .
+          mkdir -p deploy
+          cp -r dist/* deploy/
+          cp server.js package.json Procfile deploy/
+          cd deploy && zip -r ../deploy.zip .
+        shell: /usr/bin/bash --noprofile --norc -e -o pipefail {0}
 
       - name: Deploy to AWS Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
