build: Reflects changes to the build process.
- 환경 복구 대기 시간을 180으로 수정합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,8 @@ jobs:
           version_label: deploy-${{ github.run_number }}
           region: ap-northeast-2
           deployment_package: deploy.zip
+          wait_for_environment_recovery: 180
+
 
       - name: Check deployment status
         run: |
