ci/cd: Update deploy.yml
- 작업 이름을 AkatsukiFE로 변경
- VUE_APP_BACKEND_URL 환경 변수 추가
- application_name 및 environment_name 수정
- aws elasticbeanstalk 명령어에서 사용자 수 체크 개선

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: PIOMSF2
+name: AkatsukiFE
 
 on:
   push:
@@ -22,6 +22,8 @@ jobs:
         run: npm install
 
       - name: Build the project
+        env:
+          VUE_APP_BACKEND_URL: ${{ secrets.BACKEND_URL }}
         run: npm run build
 
       - name: Zip the build artifacts
@@ -37,8 +39,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: PIOMSF2
-          environment_name: PIOMSF2-env
+          application_name: AkatsukiFE
+          environment_name: AkatsukiFE-env
           version_label: deploy-${{ github.run_number }}
           region: ap-northeast-2
           deployment_package: deploy.zip
@@ -46,7 +48,7 @@ jobs:
 
       - name: Check deployment status
         run: |
-          STATUS=$(aws elasticbeanstalk describe-environments --environment-names PIOMSF2-env --query 'Environments[0].Health' --output text)
+          STATUS=$(aws elasticbeanstalk describe-environments --environment-names AkatsukiFE-env --query 'Environments[0].Health' --output text)
           if [ "$STATUS" != "Green" ]; then
             echo "Deployment failed. Environment health is $STATUS."
             exit 1
@@ -61,7 +63,7 @@ jobs:
       - name: Retrieve EB Engine Log
         if: failure()
         run: |
-          EB_LOG=$(aws elasticbeanstalk describe-environment-resources --environment-name PIOMSF2-env --query 'EnvironmentResources.Instances[0].Id' --output text)
+          EB_LOG=$(aws elasticbeanstalk describe-environment-resources --environment-name AkatsukiFE-env --query 'EnvironmentResources.Instances[0].Id' --output text)
           echo "Instance ID: $EB_LOG"
           COMMAND_ID=$(aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=InstanceIds,Values=$EB_LOG" --parameters 'commands=["sudo cat /var/log/eb-engine.log"]' --query 'Command.CommandId' --output text)
           sleep 10
@@ -92,7 +94,7 @@ jobs:
           
           UNIQUE_USERS=$(echo "$COMMENTS" | jq -r 'map(.author.login) | unique | length')
           
-          if [ $UNIQUE_USERS -lt 2]; then
+          if [ $UNIQUE_USERS -lt 2 ]; then
             echo "Not enough unique users ($UNIQUE_USERS) in the pull request comments. At least 2 unique users are required."
             exit 1
           else
