ci/cd: Update deployment version label with GitHub SHA
- GitHub SHA를 사용하여 배포 버전 라벨을 업데이트합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: AkatsukiFE
           environment_name: AkatsukiFE-env
-          version_label: deploy-${{ github.run_number }}
+          version_label: deploy-${{ github.run_number }}-${{ github.sha }}
           region: ap-northeast-2
           deployment_package: deploy.zip
           wait_for_environment_recovery: 180
