--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
           mkdir -p deploy
           cp -r dist/* deploy/
           cp server.js package.json Procfile deploy/
+          cp -r .ebextensions deploy/ # Include .ebextensions
           cd deploy && zip -r ../deploy.zip .
         shell: /usr/bin/bash --noprofile --norc -e -o pipefail {0}
 
