ci/cd: Update deploy.yml to upload build artifacts to AWS S3
- deploy.yml 파일을 업데이트하여 빌드 아티팩트를 AWS S3에 업로드합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Upload build artifacts to S3
         run: |
-          aws s3 cp deploy.zip s3://your-s3-bucket-name/deploy/deploy-${{ github.run_number }}-${{ github.sha }}.zip
+          aws s3 cp deploy.zip s3://elasticbeanstalk-ap-northeast-2-730335325274 /deploy/deploy-${{ github.run_number }}-${{ github.sha }}.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
