ci/cd: AWS Elastic Beanstalk deployment script improvements
- .ebextensions 폴더 파일 복사하여 배포 시 필요한 파일 추가
- .platform/nginx.config 및 .ebextensions/00-makeFiles.config 파일 추가
- deploy.yml 파일 수정하여 추가된 파일 배포 스크립트에 반영
- 배포 시간을 환경 변수에 저장하는 스크립트 추가
- nginx.conf 설정을 업데이트하고 Nginx를 재로드 함.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
           mkdir -p deploy
           cp -r dist/* deploy/
           cp server.js package.json Procfile deploy/
+          cp -r .ebextensions deploy/.ebextensions
+          cp .platform/nginx.config deploy/.platform/nginx.config
           cd deploy && zip -r ../deploy.zip .
         shell: /usr/bin/bash --noprofile --norc -e -o pipefail {0}
 
@@ -42,6 +44,10 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ap-northeast-2
 
+      - name: Get current time
+        id: current-time
+        run: echo "CURRENT_TIME=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+
       - name: Deploy to AWS Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
         with:
@@ -49,7 +55,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: AkatsukiFE
           environment_name: AkatsukiFE-env
-          version_label: deploy-${{ github.run_number }}-${{ github.sha }}
+          version_label: deploy-${{ github.run_number }}-${{ github.sha }}-${{ env.CURRENT_TIME }}
           region: ap-northeast-2
           deployment_package: deploy.zip
           wait_for_environment_recovery: 180
