ci/cd: Modified to create .platform directory in deploy.yml file
- 배포 파일을 저장할 새로운 디렉토리 생성
- 기존 dist 디렉토리의 파일들을 새로운 디렉토리로 복사
- 서버 파일과 설정 파일도 새 디렉토리로 이동
- .ebextensions 폴더도 새 디렉토리로 이동

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Zip the build artifacts
         run: |
-          mkdir -p deploy
+          mkdir -p deploy/.platform
           cp -r dist/* deploy/
           cp server.js package.json Procfile deploy/
           cp -r .ebextensions deploy/.ebextensions
