ci/cd: Fix syntax error in deploy.yml and update port numbers in config files
- deploy.yml에서 구문 오류 수정 및 config 파일의 포트 번호 업데이트
- deploy.yml에서 구문 오류가 수정되었습니다.
- .ebextensions/00-makeFiles.config에서 포트 번호가 3000으로 변경되었습니다.
- vite.config.js의 포트 번호가 3000으로 변경되었습니다.
- server.js의 포트 번호가 3000으로 변경되었습니다.

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -4,33 +4,63 @@ files:
     owner: root
     group: root
     content: |
-      worker_processes 1;
+      user                    nginx;
+      error_log               /var/log/nginx/error.log warn;
+      pid                     /var/run/nginx.pid;
+      worker_processes        auto;
+      worker_rlimit_nofile    33282;
 
       events {
-          worker_connections 1024;
+          use epoll;
+          worker_connections  1024;
+          multi_accept on;
       }
 
       http {
-          include       mime.types;
-          default_type  application/octet-stream;
+        include       /etc/nginx/mime.types;
+        default_type  application/octet-stream;
 
-          sendfile        on;
-          keepalive_timeout  65;
+        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for"';
 
-          server {
-              listen       8080;
-              server_name  localhost;
+        include       conf.d/*.conf;
 
-              location / {
-                  root   /var/app/current/dist;
-                  try_files $uri $uri/ /index.html;
-              }
+        map $http_upgrade $connection_upgrade {
+            default     "upgrade";
+        }
 
-              error_page   500 502 503 504  /50x.html;
-              location = /50x.html {
-                  root   /usr/share/nginx/html;
-              }
-          }
+        upstream frontend {
+          server 127.0.0.1:3000;
+          keepalive 1024;
+        }
+
+        server {
+            listen        80 default_server;
+            listen        [::]:80 default_server;
+
+            location / {
+                proxy_pass          http://frontend;
+                proxy_http_version  1.1;
+                proxy_set_header    Connection          $connection_upgrade;
+                proxy_set_header    Upgrade             $http_upgrade;
+
+                proxy_set_header    Host                $host;
+                proxy_set_header    X-Real-IP           $remote_addr;
+                proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+            }
+
+            access_log    /var/log/nginx/access.log main;
+
+            client_header_timeout 60;
+            client_body_timeout   60;
+            keepalive_timeout     60;
+            gzip                  off;
+            gzip_comp_level       4;
+
+            # Include the Elastic Beanstalk generated locations
+            include conf.d/elasticbeanstalk/healthd.conf;
+        }
       }
 
 container_commands:
