ci/cd: Update Node.js version in deploy workflow
- 배포 워크플로우에서 Node.js 버전 업데이트
- 'node-version'를 '21.x'에서 '20.x'로 변경
- deploy.yml 파일에 변경 내용 적용
- 배포할 때 Node.js 버전을 업데이트

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -30,8 +30,8 @@ files:
             default     "upgrade";
         }
 
-        upstream frontend {
-          server 127.0.0.1:3000;
+        upstream vite {
+          server 127.0.0.1:8080;
           keepalive 1024;
         }
 
@@ -40,7 +40,7 @@ files:
             listen        [::]:80 default_server;
 
             location / {
-                proxy_pass          http://frontend;
+                proxy_pass          http://vite;
                 proxy_http_version  1.1;
                 proxy_set_header    Connection          $connection_upgrade;
                 proxy_set_header    Upgrade             $http_upgrade;
