ci/cd: Adjust build process to copy nginx configuration file only if it exists
- .github/workflows/deploy.yml 파일의 빌드 프로세스 수정
- .platform/nginx.config 파일이 존재할 때만 복사하도록 수정
- .ebextensions/00-makeFiles.config 파일의 불필요한 부분 삭제

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,9 @@ jobs:
           cp -r dist/* deploy/
           cp vite.config.js package.json Procfile server.js deploy/
           cp -r .ebextensions deploy/.ebextensions
-          cp .platform/nginx.config deploy/.platform/nginx.config || true
+          if [ -f .platform/nginx.config ]; then
+            cp .platform/nginx.config deploy/.platform/nginx.config
+          fi
           cd deploy && zip -r ../deploy.zip .
         shell: /usr/bin/bash --noprofile --norc -e -o pipefail {0}
 
