ci/cd: Update deployment script to organize files more efficiently
- 배포 스크립트를 업데이트하여 파일을 효율적으로 정리함.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Generate deployment package
         run: |
           mkdir -p deploy/.platform
-          cp -r dist/* deploy/
+          mkdir -p deploy/dist
+          cp -r dist/* deploy/dist
           cp vite.config.js package.json Procfile server.js deploy/
           cp -r .ebextensions deploy/.ebextensions
           if [ -f .platform/nginx.config ]; then
