ci/cd: deploy.yml
- dist 디렉토리가 있으면 dist/*를 deploy/dist로 복사합니다.
- vite.config.js 파일이 있으면 vite.config.js를 deploy/vite.config.js로 복사합니다.
- package.json 파일이 있으면 package.json을 deploy/package.json으로 복사합니다.
- Procfile 파일이 있으면 Procfile을 deploy/Procfile로 복사합니다.
- server.js 파일이 있으면 server.js를 deploy/server.js로 복사합니다.
- .ebextensions 디렉토리가 있으면 .ebextensions를 deploy/.ebextensions로 복사합니다.
- .platform/nginx.config 파일이 있으면 .platform/nginx.config를 deploy/.platform/nginx.config로 복사합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,58 @@ jobs:
         run: |
           mkdir -p deploy/.platform
           mkdir -p deploy/dist
-          cp -r dist/* deploy/dist
-          cp vite.config.js package.json Procfile server.js deploy/
-          cp -r .ebextensions deploy/.ebextensions
+          
+          if [ -d dist ]; then
+            cp -r dist/* deploy/dist
+          else
+            echo "Dist directory not found!"
+            exit 1
+          fi
+
+          if [ -f vite.config.js ]; then
+            cp vite.config.js deploy/vite.config.js
+          else
+            echo "vite.config.js not found!"
+            exit 1
+          fi
+          
+          if [ -f package.json ]; then
+            cp package.json deploy/package.json
+          else
+            echo "package.json not found!"
+            exit 1
+          fi
+
+          if [ -f Procfile ]; then
+            cp Procfile deploy/Procfile
+          else
+            echo "Procfile not found!"
+            exit 1
+          fi
+
+          if [ -f server.js ]; then
+            cp server.js deploy/server.js
+          else
+            echo "server.js not found!"
+            exit 1
+          fi
+
+          if [ -d .ebextensions ]; then
+            cp -r .ebextensions deploy/.ebextensions
+          else
+            echo ".ebextensions directory not found!"
+            exit 1
+          fi
+          
           if [ -f .platform/nginx.config ]; then
             cp .platform/nginx.config deploy/.platform/nginx.config
+          else
+            echo ".platform/nginx.config not found!"
+            exit 1
           fi
+          
           cd deploy && zip -r ../deploy.zip .
-        shell: /usr/bin/bash --noprofile --norc -e -o pipefail {0}
+        shell: bash
 
       - name: Upload build artifacts to S3
         run: |
