--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -4,59 +4,35 @@ files:
     owner: root
     group: root
     content: |
-      user                    nginx;
-      error_log               /var/log/nginx/error.log warn;
-      pid                     /var/run/nginx.pid;
-      worker_processes        auto;
-      worker_rlimit_nofile    33282;
+      worker_processes 1;
 
       events {
-          use epoll;
-          worker_connections  1024;
-          multi_accept on;
+          worker_connections 1024;
       }
 
       http {
-        include       /etc/nginx/mime.types;
-        default_type  application/octet-stream;
+          include       mime.types;
+          default_type  application/octet-stream;
 
-        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                          '$status $body_bytes_sent "$http_referer" '
-                          '"$http_user_agent" "$http_x_forwarded_for"';
+          sendfile        on;
+          keepalive_timeout  65;
 
-        include       conf.d/*.conf;
+          server {
+              listen       8080;
+              server_name  localhost;
 
-        map $http_upgrade $connection_upgrade {
-            default     "upgrade";
-        }
+              location / {
+                  root   /var/app/current/dist;
+                  try_files $uri $uri/ /index.html;
+              }
 
-        upstream vite {
-          server 127.0.0.1:8080;
-          keepalive 1024;
-        }
+              error_page   500 502 503 504  /50x.html;
+              location = /50x.html {
+                  root   /usr/share/nginx/html;
+              }
+          }
+      }
 
-        server {
-            listen        80 default_server;
-            listen        [::]:80 default_server;
-
-            location / {
-                proxy_pass          http://vite;
-                proxy_http_version  1.1;
-                proxy_set_header    Connection          $connection_upgrade;
-                proxy_set_header    Upgrade             $http_upgrade;
-
-                proxy_set_header    Host                $host;
-                proxy_set_header    X-Real-IP           $remote_addr;
-                proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-            }
-
-            access_log    /var/log/nginx/access.log main;
-
-            client_header_timeout 60;
-            client_body_timeout   60;
-            keepalive_timeout     60;
-            gzip                  off;
-            gzip_comp_level       4;
-
-            # Include the Elastic Beanstalk generated locations
-
+container_commands:
+  01_reload_nginx:
+    command: "sudo systemctl reload nginx"
