ci/cd: Update nginx config file and add npm install and build commands
- .platform/nginx.conf 파일로 업데이트하고 npm 설치 및 빌드 명령 추가
- .ebextensions/00-makeFiles.config에서 npm 종속성 설치하고 프로젝트 빌드
- nginx 설정 파일과 npm 명령어 추가하여 빌드 프로세스 변경

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -33,6 +33,15 @@ files:
           }
       }
 
+commands:
+  01_install_npm_dependencies:
+    command: "npm install"
+    cwd: "/var/app/staging"
+
+  02_build_project:
+    command: "npm run build"
+    cwd: "/var/app/staging"
+
 container_commands:
   01_reload_nginx:
     command: "sudo systemctl reload nginx"
