--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,10 +74,10 @@ jobs:
             exit 1
           fi
           
-          if [ -f .platform/nginx.config ]; then
-            cp .platform/nginx.config deploy/.platform/nginx.config
+          if [ -f .platform/nginx.conf ]; then
+            cp .platform/nginx.conf deploy/.platform/nginx.conf
           else
-            echo ".platform/nginx.config not found!"
+            echo ".platform/nginx.conf not found!"
             exit 1
           fi
           
