--- a/.platform/nginx.config
+++ b/.platform/nginx.config
@@ -11,6 +11,9 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    types_hash_max_size 2048;
+    types_hash_bucket_size 128;
+
     server {
         listen       8080;
         server_name  localhost;
