ci/cd: Modify nginx.conf path in deploy task
- .platform/nginx.conf의 root 경로를 /var/app/current/dist에서 /dist로 수정
- 디렉터리 구조 변경으로 인한 경로 수정이 필요함.

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -17,12 +17,15 @@ files:
           sendfile        on;
           keepalive_timeout  65;
 
+          types_hash_max_size 2048;
+          types_hash_bucket_size 128;
+
           server {
               listen       8080;
               server_name  localhost;
 
               location / {
-                  root   /var/app/current/dist;
+                  root   /dist;
                   try_files $uri $uri/ /index.html;
               }
 
@@ -36,11 +39,9 @@ files:
 commands:
   01_install_npm_dependencies:
     command: "npm install"
-    cwd: "/var/app/staging"
 
   02_build_project:
     command: "npm run build"
-    cwd: "/var/app/staging"
 
 container_commands:
   01_reload_nginx:
