--- a/.platform/nginx.conf
+++ b/.platform/nginx.conf
@@ -19,7 +19,7 @@ http {
         server_name  localhost;
 
         location / {
-            root   /var/app/current/dist;
+            root   /dist;
             try_files $uri $uri/ /index.html;
         }
 
