--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
           node-version: '20.x'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install || npm install || npm install
 
       - name: Build the project
         env:
@@ -31,7 +32,7 @@ jobs:
         run: |
           mkdir -p deploy/.platform
           mkdir -p deploy/dist
-          
+
           if [ -d dist ]; then
             cp -r dist/* deploy/dist
           else
@@ -45,7 +46,7 @@ jobs:
             echo "vite.config.js not found!"
             exit 1
           fi
-          
+
           if [ -f package.json ]; then
             cp package.json deploy/package.json
           else
@@ -143,9 +144,9 @@ jobs:
         run: |
           PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
           COMMENTS=$(gh pr view $PR_NUMBER --json comments --jq '.comments')
-          
+
           UNIQUE_USERS=$(echo "$COMMENTS" | jq -r 'map(.author.login) | unique | length')
-          
+
           if [ $UNIQUE_USERS -lt 2 ]; then
             echo "Not enough unique users ($UNIQUE_USERS) in the pull request comments. At least 2 unique users are required."
             exit 1
