ci/cd: Update ci/cd files

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -1,48 +1,31 @@
-files:
-  "/etc/nginx/conf.d/nginx.conf":
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
-      worker_processes 1;
+worker_processes 1;
 
-      events {
-          worker_connections 1024;
-      }
+events {
+    worker_connections 1024;
+}
 
-      http {
-          include       mime.types;
-          default_type  application/octet-stream;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-          sendfile        on;
-          keepalive_timeout  65;
+    sendfile        on;
+    keepalive_timeout  65;
 
-          types_hash_max_size 2048;
-          types_hash_bucket_size 128;
+    types_hash_max_size 2048;
+    types_hash_bucket_size 128;
 
-          server {
-              listen       8080;
-              server_name  localhost;
+    server {
+        listen       8080;
+        server_name  localhost;
 
-              location / {
-                  root   /dist;
-                  try_files $uri $uri/ /index.html;
-              }
+        location / {
+            root   /var/app/current/piomsfe/dist;
+            try_files $uri $uri/ /index.html;
+        }
 
-              error_page   500 502 503 504  /50x.html;
-              location = /50x.html {
-                  root   /usr/share/nginx/html;
-              }
-          }
-      }
-
-commands:
-  01_install_npm_dependencies:
-    command: "npm install"
-
-  02_build_project:
-    command: "npm run build"
-
-container_commands:
-  01_reload_nginx:
-    command: "sudo systemctl reload nginx"
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+    }
+}
