ci/cd: Update ci/cd files

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -4,6 +4,14 @@ events {
     worker_connections 1024;
 }
 
+container_commands:
+  01_mkdir:
+    command: "mkdir -p /var/app/current/dist"
+    ignoreErrors: true
+  02_cp:
+    command: "cp -r /var/app/staging/dist/* /var/app/current/dist/"
+    ignoreErrors: true
+
 http {
     include       mime.types;
     default_type  application/octet-stream;
