ci/cd: Update deploy process for npm dependencies
- 'deploy.yml' 파일을 업데이트하여 npm 종속성을 설치하는 프로세스를 조정합니다.
- 'deploy/.platform/hooks/prebuild/01_install_npm_dependencies.sh' 파일을 수정합니다.
- 'deploy/.platform/hooks/prebuild/01_install_npm_dependencies.sh' 스크립트를 업데이트합니다.
- 'deploy/.platform/hooks/prebuild/01_install_npm_dependencies.sh'에 실행 권한을 부여합니다.
- '.ebextensions/00-makeFiles.config' 파일을 변경합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,10 @@ jobs:
           cp Procfile deploy/
           cp server.cjs deploy/
           cp -r .ebextensions deploy/
-          cp .platform/hooks/prebuild/01_install_npm_dependencies.sh deploy/.platform/hooks/prebuild/
+          echo '#!/bin/bash' > deploy/.platform/hooks/prebuild/01_install_npm_dependencies.sh
+          echo 'echo "Running npm install"' >> deploy/.platform/hooks/prebuild/01_install_npm_dependencies.sh
+          echo 'npm install --omit=dev' >> deploy/.platform/hooks/prebuild/01_install_npm_dependencies.sh
+          chmod +x deploy/.platform/hooks/prebuild/01_install_npm_dependencies.sh
           cd deploy && zip -r ../deploy.zip .
         shell: bash
 
