ci/cd: Adjust build script for deployment process
- 빌드 스크립트를 배포 프로세스에 맞게 조정합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Generate deployment package
         run: |
-          mkdir -p deploy/.platform/nginx/conf.d
+          mkdir -p deploy/.platform
           mkdir -p deploy/dist
 
           if [ -d dist ]; then
@@ -75,8 +75,9 @@ jobs:
             exit 1
           fi
 
-          if [ -f .platform/nginx/conf.d/nginx.conf ]; then
-            cp .platform/nginx/conf.d/nginx.conf deploy/.platform/nginx/conf.d/nginx.conf
+          if [ -f .platform/nginx.conf ]; then
+            mkdir -p deploy/.platform/nginx/
+            cp .platform/nginx.conf deploy/.platform/nginx/nginx.conf
           else
             echo "nginx.conf not found!"
             exit 1
