--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,44 +14,27 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
         with:
-          node-version: '20.x'
-
-      - name: Install dependencies
-        run: |
-          npm install || npm install || npm install
-
-      - name: Build the project
-        env:
-          VITE_APP_BACKEND_URL: ${{ secrets.BACKEND_URL }}
-        run: npm run build
-
-      - name: Generate deployment package
-        run: |
-          mkdir -p deploy/.platform
-          mkdir -p deploy/.ebextensions
-          mkdir -p deploy/dist
-
-          cp -r dist deploy/dist
-          cp vite.config.js deploy/vite.config.js
-          cp package.json deploy/package.json
-          cp Procfile deploy/Procfile
-          cp server.cjs deploy/server.cjs
-          cp -r .platform deploy/.platform
-          cp -r .ebextensions deploy/.ebextensions
-
-          cd deploy && zip -r ../deploy.zip .
-        shell: bash
-
-      - name: Upload build artifacts to S3
-        run: |
-          aws s3 cp deploy.zip s3://elasticbeanstalk-ap-northeast-2-730335325274/deploy/deploy-${{ github.run_number }}-${{ github.sha }}.zip
+          registry-type: public
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-northeast-2
+
+      - name: Build, tag, and push Docker image to Amazon ECR
+        id: build-image
+        run: |
+          docker build -t my-app:latest .
+          docker tag my-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-2.amazonaws.com/my-app:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-2.amazonaws.com/my-app:latest
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Deploy to AWS Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
@@ -79,46 +62,3 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ap-northeast-2
-
-      - name: Retrieve EB Engine Log
-        if: failure()
-        run: |
-          EB_LOG=$(aws elasticbeanstalk describe-environment-resources --environment-name AkatsukiFE-env --query 'EnvironmentResources.Instances[0].Id' --output text)
-          echo "Instance ID: $EB_LOG"
-          COMMAND_ID=$(aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=InstanceIds,Values=$EB_LOG" --parameters 'commands=["sudo cat /var/log/eb-engine.log"]' --query 'Command.CommandId' --output text)
-          sleep 10
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id $EB_LOG --query 'StandardOutputContent' --output text
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-northeast-2
-
-  check-comments:
-    runs-on: ubuntu-latest
-    needs: build-and-deploy
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Install GitHub CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gh jq
-
-      - name: Check Pull Request Comments
-        id: pr-comments
-        run: |
-          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-          COMMENTS=$(gh pr view $PR_NUMBER --json comments --jq '.comments')
-
-          UNIQUE_USERS=$(echo "$COMMENTS" | jq -r 'map(.author.login) | unique | length')
-
-          if [ $UNIQUE_USERS -lt 2 ]; then
-            echo "Not enough unique users ($UNIQUE_USERS) in the pull request comments. At least 2 unique users are required."
-            exit 1
-          else
-            echo "Sufficient unique users ($UNIQUE_USERS) in the pull request comments."
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
