ci/cd: Set AWS_REGION to ap-northeast-2.
- deploy.yml 파일의 AWS_REGION을 수정합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,11 +81,11 @@ jobs:
       - name: Log in to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
         with:
+          region: ap-northeast-2
           registry-type: public
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ap-northeast-2
 
       - name: Upload build artifacts to S3
         run: |
