ci/cd: Add .platform directory check and copy to deploy folder
- .platform 디렉토리 존재 여부 확인 후 deploy 폴더에 복사합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,13 @@ jobs:
             exit 1
           fi
 
+          if [ -d .platform ]; then
+            cp -r .platform deploy/.platform
+          else
+            echo ".platform directory not found!"
+            exit 1
+          fi
+
           cd deploy && zip -r ../deploy.zip .
         shell: bash
 
