ci/cd: Update deploy.yml and 00-makeFiles.config
- Amazon ECR에 로그인합니다.
- deploy.zip을 S3에 업로드합니다.
- npm 설치를 시작합니다.
- npm 프록시 및 업그레이드 설정을 추가합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,15 +85,17 @@ jobs:
           cd deploy && zip -r ../deploy.zip .
         shell: bash
 
-      - name: Log in to Amazon ECR
+      - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
         with:
           registry-type: public
           mask-password: true
+          skip-logout: false
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ap-northeast-2
+
 
       - name: Upload build artifacts to S3
         run: |
