--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -1,15 +1,5 @@
-# .ebextensions/01_npm.config
-commands:
-  01_set_npm_proxy:
-    command: |
-      npm config set proxy http://proxy-url:port
-      npm config set https-proxy http://proxy-url:port
-  02_upgrade_npm:
-    command: npm install -g npm@latest
-
 container_commands:
-  01_npm_install:
-    command: |
-      echo "Starting npm install..."
-      npm install || npm install || npm install
-    leader_only: false
+  01_mkdir:
+    command: "mkdir -p /var/app/current/dist"
+  02_cp:
+    command: "cp -r /var/app/staging/dist/* /var/app/current/dist/"
