--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "jest --config jest.unit.config.cjs",
-    "start": "node server.cjs"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.7.1",
