--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -1,31 +1,46 @@
-worker_processes 1;
+user                    nginx;
+error_log               /var/log/nginx/error.log warn;
+pid                     /var/run/nginx.pid;
+worker_processes        auto;
+worker_rlimit_nofile    33282;
 
 events {
-    worker_connections 1024;
+    use epoll;
+    worker_connections  1024;
+    multi_accept on;
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
 
-    sendfile        on;
-    keepalive_timeout  65;
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    types_hash_max_size 2048;
-    types_hash_bucket_size 128;
+  include       conf.d/*.conf;
 
-    server {
-        listen       8080;
-        server_name  localhost;
+  server {
+      listen        80 default_server;
+      listen        [::]:80 default_server;
 
-        location / {
-            root   /var/app/current/dist;
-            try_files $uri $uri/ /index.html;
-        }
+      root /usr/share/nginx/html;  # Vue3 애플리케이션이 빌드된 파일들이 위치하는 디렉토리
+      index index.html;
 
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-    }
+      location / {
+          try_files $uri $uri/ /index.html;
+      }
+
+      access_log    /var/log/nginx/access.log main;
+
+      client_header_timeout 60;
+      client_body_timeout   60;
+      keepalive_timeout     60;
+      gzip                  on;
+      gzip_comp_level       4;
+      gzip_types            text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+      # Include the Elastic Beanstalk generated locations (if necessary)
+      include conf.d/elasticbeanstalk/healthd.conf;
+  }
 }
