ci/cd: Update deploy workflow to enhance security and reliability
- 관련 서버 및 S3 상의 보안성을 강화하고 안정성을 높이기 위한 배포 워크플로우 업데이트
- 배포 및 빌드 과정에서 에러가 발생할 경우 재시도하도록 수정
- npm 의존성 설치 시 최대 3회 재시도하고 실패 시 오류 상태 반환
- 배포된 소스 코드를 S3에 업로드하여 보안 및 안정성 강화
- AWS Elastic Beanstalk에 배포 및 환경 상태 확인
- 프로젝트 루트 경로에 .ebextensions 및 .platform 디렉토

--- a/.ebextensions/00-makeFiles.config
+++ b/.ebextensions/00-makeFiles.config
@@ -1,5 +1,7 @@
 container_commands:
   01_mkdir:
     command: "mkdir -p /var/app/current/dist"
+    ignoreErrors: false
   02_cp:
     command: "cp -r /var/app/staging/dist/* /var/app/current/dist/"
+    test: "test -d /var/app/staging/dist"
