--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -42,5 +42,23 @@ http {
 
       # Include the Elastic Beanstalk generated locations (if necessary)
       include conf.d/elasticbeanstalk/healthd.conf;
+
+      # Security Headers
+      add_header X-Frame-Options "SAMEORIGIN" always;
+      add_header X-Content-Type-Options "nosniff" always;
+      add_header X-XSS-Protection "1; mode=block" always;
+
+      # Disable content sniffing
+      add_header X-Content-Type-Options "nosniff";
+
+      # SSL configuration
+      # Uncomment the following lines when SSL certificate is configured
+      # listen 443 ssl;
+      # ssl_certificate /etc/ssl/certs/your_domain_name.pem;
+      # ssl_certificate_key /etc/ssl/private/your_domain_name.key;
+      # ssl_protocols TLSv1.2 TLSv1.3;
+      # ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+      # ssl_session_cache shared:SSL:10m;
+      # ssl_session_timeout 10m;
   }
 }
