ci/cd: Add Procfile to deployment process
- Procfile 백엔드 서버 실행 설정 파일 추가
- Procfile을 생성하는 단계를 추가하여 백엔드 서버 실행 설정 파일을 생성합니다.
- deploy.zip에 Procfile, server.js, package.json을 추가하여 애플리케이션을 묶습니다.
- 배포 과정에 Procfile을 포함시켜 백엔드 서버를 실행할 수 있도록 합니다.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,11 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Create Procfile
+        run: echo "web: node server.js" > Procfile
+
       - name: Zip Artifacts
-        run: zip -r deploy.zip dist
+        run: zip -r deploy.zip dist Procfile server.js package.json
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -50,4 +53,4 @@ jobs:
 
       - name: Swap CNAME
         if: success()
-        run: aws elasticbeanstalk swap-environment-cnames --source-environment-name ${{ github.head_ref }}-${{ github.run_number }} --destination-environment-name AkatsukiFE-env
+        run: aws elasticbeanstalk swap-environment-cnames --source-environment-name AkatsukiFE-env --destination-environment-name AkatsukiFE-env
